[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markitdown"
version = "0.1.0"
description = "A utility tool for converting various file formats to Markdown"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Fork maintainer", email = "maintainer@example.com" },
]
keywords = ["markdown", "converter", "document", "pdf", "docx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "beautifulsoup4>=4.11.0",
    "requests>=2.28.0",
    "python-docx>=0.8.11",
    "pdfminer.six>=20221105",
    "openpyxl>=3.0.10",
    "python-pptx>=0.6.21",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]
audio = [
    "openai>=1.0.0",
    "pydub>=0.25.1",
]

[project.scripts]
markitdown = "markitdown.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/markitdown"
Issues = "https://github.com/yourusername/markitdown/issues"
Source = "https://github.com/yourusername/markitdown"

[tool.hatch.build.targets.wheel]
packages = ["src/markitdown"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=markitdown --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
